# extensible-ecs

./: extensible-ecs.cabal  extensible-systems.cabal  stack.yaml
app/: Main.hs  SystemBar.hs  SystemBaz.hs  SystemFoo.hs
app/System/: Color.hs  Physics.hs  Sound.hs
src/: Lib.hs  Rumpus.hs
src/Data/: ECS.hs
src/Data/ECS/: Component.hs  Debug.hs  Entity.hs  SaveLoad.hs  System.hs  TH.hs  Types.hs  Vault.hs
src/Rumpus/: Component.hs  Entity.hs  System.hs  TH.hs  Types.hs
