name:                extensible-ecs
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/lukexi/extensible-ecs#readme
license:             BSD3
license-file:        LICENSE
author:              Luke Iannini
maintainer:          lukexi@me.com
copyright:           Luke Iannini
category:            Graphics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.ECS
                       Data.ECS.Component
                       Data.ECS.Entity
                       Data.ECS.System
                       Data.ECS.TH
                       Data.ECS.Types
                       Data.ECS.Vault
                       Data.ECS.SaveLoad
  build-depends:       base >= 4.7 && < 5
                     , lens-extra
                     , mtl
                     , containers
                     , random
                     , yaml
                     , template-haskell
                     , filepath
                     , directory
                     , hashable
                     , unordered-containers
                     , monad-control
  default-language:    Haskell2010
  ghc-options:         -Wall -O2

test-suite app
  type: exitcode-stdio-1.0
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       System.Color
                       System.Physics
                       System.Sound
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , extensible-ecs
                     , lens-extra
                     , mtl
                     , random
                     , yaml
                     , containers
                     , bullet-mini
                     , linear-extra
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/lukexi/extensible-ecs
