name:                extensible-systems
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/lukexi/extensible-systems#readme
license:             BSD3
license-file:        LICENSE
author:              Luke Iannini
maintainer:          lukexi@me.com
copyright:           Luke Iannini
category:            Graphics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , vault
                     , lens
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 

executable extensible-systems
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , extensible-systems
                     , vault
                     , lens
                     , mtl
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/lukexi/extensible-systems
